# Vexart

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION-ANALYSIS.md  README.md  TGE-AUDIT.md  TGE-ROADMAP.md  bunfig.toml  lightcode-layout.json  package.json  rust-toolchain.toml  solid-plugin.ts  tsconfig.api-extractor.json  tsconfig.api.json  tsconfig.json
.atl/: skill-registry.md
.cargo/: config.toml
.github/workflows/: build-native.yml  phase4-gates.yml  transport-perf-gates.yml
docs/: API-POLICY.md  ARCHITECTURE.md  HOTPATH-AUDIT.md  PERF-AUDIT-PHASE-15.md  PERFORMANCE-120FPS-PLAN.md  PRD-RUST-RETAINED-ENGINE.md  PRD-VEXART-APP-FRAMEWORK.md  PRD.md  RETAINED-CLEANUP.md  ROADMAP-RUST-RETAINED-ENGINE.md  api-reference.md  architecture.md  components.md  distribution-packaging.md  engine-optimization-plan.md  examples.md  getting-started.md  hooks.md  kitty-transport-hardening-plan.md  license-verification.md  lightcode-gpu-fidelity-checklist.md  lightcode-gpu-fidelity-phases.md  lightcode-gpu-first-blueprint.md  lightcode-wgpu-port-phases.md  private-beta.md  tge-current-state-audit-plan.md  tge-current-state-audit-report.md  tge-damage-rendering-blueprint.md  tge-engine-fixes.md  tge-engine-runtime-separation-plan.md  tge-gpu-e2e-execution-plan.md  tge-gpu-first-remaining-work.md  tge-gpu-first-renderer-design.md  tge-gpu-native-end-to-end-redesign.md  tge-gpu-native-remaining-architecture.md  tge-gpu-only-engine-architecture.md  tge-gpu-only-refactor-roadmap.md  tge-gpu-output-path-plan.md  tge-gpu-paint-backend-design.md  tge-package-migration-matrix.md  (+4 more)
docs/archive/: MIGRATION-ANALYSIS.md  TGE-ARCHITECTURE-REPORT.md  TGE-AUDIT.md  TGE-ROADMAP.md  docs.md
examples/: README.md  backdrop-corner-radii-gpu.tsx  backdrop-corner-radii-test.tsx  backdrop-overlap-test.tsx  backdrop-transform-gpu.tsx  backdrop-transform-test.tsx  components.tsx  cosmic-gpu-mock.tsx  counter-app.tsx  dashboard.tsx  debug-clay.ts  effects.tsx  floating-layer-test.tsx  focus-debug.tsx  font-family-test.tsx  font-showcase.tsx  gpu-verify.tsx  hello-app.tsx  hello.tsx  input-self-render.tsx  input.tsx  interaction-latency.tsx  interactive.tsx  layer-scroll.tsx  layers.tsx  lightcode-app.tsx  lightcode-gpu-first-behind-only.tsx  lightcode-gpu-first-behind-profile.tsx  lightcode-gpu-first-cpu-profile.tsx  lightcode-gpu-first-gpu-profile-shm-cadence-dirty.tsx  lightcode-gpu-first-gpu-profile-shm-cadence.tsx  lightcode-gpu-first-gpu-profile-shm.tsx  lightcode-gpu-first-gpu-profile.tsx  lightcode-gpu-first-nodes-profile.tsx  lightcode-gpu-first-trace.tsx  lightcode-gpu-first.tsx  lightcode-gpu.tsx  lightcode.tsx  markdown.tsx  minimal-test.tsx  (+30 more)
examples/lightcode/: app.tsx  desktop.tsx  lightcode-demo.tsx  panels.tsx  (+5 more)
manual/: animations.md  components-headless.md  creating-theme-packages.md  data-fetching.md  developer-guide.md  event-system.md  interactivity-and-focus.md  layout-and-sizing.md  theming.md  visual-effects.md
native/libvexart/: Cargo.toml
native/libvexart/benches/: bench_kitty_encoding.rs
native/libvexart/src/: canvas_display_list.rs  frame.rs  image_asset.rs  layer.rs  lib.rs  scene.rs  types.rs
native/libvexart/src/composite/: mod.rs  readback.rs  target.rs
native/libvexart/src/ffi/: buffer.rs  error.rs  mod.rs  panic.rs
native/libvexart/src/font/: cache.rs  layout.rs  mod.rs  msdf_atlas.rs  system.rs
native/libvexart/src/kitty/: encoder.rs  mod.rs  shm.rs  transport.rs  writer.rs
native/libvexart/src/layout/: mod.rs  tree.rs  writeback.rs
native/libvexart/src/paint/: context.rs  instances.rs  mod.rs  pipeline_cache.rs
native/libvexart/src/paint/pipelines/: backdrop_blur.rs  backdrop_filter.rs  bezier.rs  circle.rs  filter.rs  glow.rs  glyph.rs  gradient_conic.rs  gradient_linear.rs  gradient_radial.rs  image.rs  image_mask.rs  image_transform.rs  mod.rs  nebula.rs  polygon.rs  rect.rs  rect_corners.rs  shadow.rs  shape_rect.rs  starfield.rs
native/libvexart/src/paint/shaders/: backdrop_blur.wgsl  backdrop_filter.wgsl  bezier.wgsl  circle.wgsl  glow.wgsl  gradient_conic.wgsl  gradient_linear.wgsl  gradient_radial.wgsl  image.wgsl  image_mask.wgsl  image_transform.wgsl  msdf_text.wgsl  nebula.wgsl  polygon.wgsl  rect.wgsl  rect_corners.wgsl  self_filter.wgsl  shadow.wgsl  shape_rect.wgsl  starfield.wgsl
native/libvexart/src/render_graph/: mod.rs
native/libvexart/src/resource/: eviction.rs  mod.rs  priority.rs  stats.rs
native/libvexart/src/text/: atlas.rs  glyph_info.rs  mod.rs  render.rs
native/libvexart/tests/integration/: roundtrip.rs
openspec/: README.md  config.yaml
scripts/: build-dist.ts  check-retained-cleanup.ts  debug-e2e.ts  debug-full-trace.ts  debug-gpu-readback.ts  debug-vexart-paint.ts  frame-breakdown-gate.ts  frame-breakdown-pre-optimization.json  frame-breakdown.tsx  frame-orchestrator-bench.ts  gen-font-atlas.ts  gen-jsx-runtime.ts  gen-types.ts  kitty-shm-repro.ts  kitty-transport-bench.ts  kitty-visual-bench.ts  lightcode-gpu-first-layer-matrix.ts  lightcode-graph-content-profile.ts  lightcode-nebula-profile.ts  lightcode-nodegraph-profile.ts  lightcode-stage4-bench.ts  lightcode-step7-stress.ts  lightcode-step9-matrix.ts  opencode-cosmic-perf.tsx  perf-baseline.json  perf-baseline.ts  perf-compare.ts  solid-plugin-dist.ts  terminal-transport-matrix.ts  visual-correctness-gate.tsx  wgpu-bridge-image-smoke.ts  wgpu-bridge-probe.ts  wgpu-bridge-rects-smoke.ts  wgpu-bridge-smoke.ts  wgpu-canvas-backend-bezier-smoke.ts  wgpu-canvas-backend-circle-smoke.ts  wgpu-canvas-backend-glow-smoke.ts  wgpu-canvas-backend-image-smoke.ts  wgpu-canvas-backend-linear-gradient-smoke.ts  wgpu-canvas-backend-mixed-smoke.ts  (+9 more)
types/: components.d.ts  engine.d.ts  jsx-runtime.d.ts  tge.d.ts  vexart.d.ts  void.d.ts
website/: astro.config.mjs  package.json  tailwind.config.mjs
zig/: build.zig
(+325 files in other folders)
