[package]
name = "libvexart"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "vexart"                 # produces libvexart.{dylib,so,dll}
crate-type = ["cdylib", "rlib"] # cdylib for FFI; rlib so Rust integration tests can link

[dependencies]
wgpu   = "29.0.1"   # GPU rendering — upgrade from bridge's pinned 26
pollster = "0.4"    # minimal sync executor to block on wgpu async — kept from old bridge
bytemuck = { version = "1.25", features = ["derive"] } # Pod/Zeroable for instance buffers
nix    = { version = "0.29", default-features = false, features = ["mman", "fs"] } # POSIX SHM only

base64 = "0.22"       # Kitty protocol encoding — Phase 2b Tier 1 / DEC-010
flate2 = "1.1"        # zlib deflate for Kitty o=z — Phase 2b Tier 1 / DEC-010
serde_json = "1"      # metrics JSON parsing — Phase 2b MSDF text / DEC-008

# ── MSDF text pipeline (Phase 2b / DEC-008) ──────────────────────────────
fontdb         = "0.23"     # System font discovery — CSS-like queries, macOS/Linux/Windows
ttf-parser     = "0.25"     # Font file parsing (also transitive via fontdb)
fdsm           = "0.8"      # Pure-Rust MSDF generation from glyph outlines
fdsm-ttf-parser = "0.2"     # Bridge: ttf-parser outlines → fdsm MSDF shapes
image          = { version = "0.25", default-features = false }  # Image buffers for MSDF output (fdsm dep)
nalgebra       = "0.34"     # Affine transforms for MSDF glyph scaling (fdsm dep)

[dev-dependencies]
# Integration-test helpers land here when tests/ is populated.

[[bench]]
name = "bench_kitty_encoding"
harness = false # use custom timing; avoids criterion dependency for now

[features]
gpu-tests = [] # gated integration tests requiring real WGPU (run with --features gpu-tests)
